--- a/res/layout/userrowlayout.xml
+++ b/res/layout/userrowlayout.xml
@@ -40,5 +40,11 @@
         android:textSize="16sp" >
 
     </TextView>
+    <TextView
+        android:id="@+id/userPhone"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:visibility="gone">
+               </TextView>
 
 </LinearLayout>
