--- a/res/values/color.xml
+++ b/res/values/color.xml
@@ -3,4 +3,5 @@
 
     <color name="lightGrey">#f0f0f0</color>
 	<color name="dateColor">#808080</color>
+	<color name="lightGreen">#D2FF76</color>
 </resources>
