--- a/res/layout/message_row_other.xml
+++ b/res/layout/message_row_other.xml
@@ -17,13 +17,12 @@
             android:textColor="@color/dateColor" />
     </FrameLayout>
     
-    
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:background="@drawable/bubble_other"
         android:layout_marginLeft="8sp"
         android:layout_marginRight="30dp"
+        android:background="@drawable/speech"
         android:orientation="vertical" >
         
     <TextView
