--- a/res/layout/userrowlayout.xml
+++ b/res/layout/userrowlayout.xml
@@ -15,7 +15,7 @@
         android:layout_marginLeft="4dp"
         android:layout_marginRight="4dp"
         android:layout_marginTop="4dp"
-        android:src="@drawable/ic_launcher" >
+        android:src="@drawable/ic_launcher1" >
         
     </ImageView>
 
