Showed undread count, Fixed msg notifcation to user list

--- a/res/layout/userrowlayout.xml
+++ b/res/layout/userrowlayout.xml
@@ -36,7 +36,7 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center_vertical"
         android:paddingRight="8dp"
-        android:text="@+id/label"
+        android:text=""
         android:textSize="16sp" >
 
     </TextView>
