--- a/res/layout/fragment_tictactoe.xml
+++ b/res/layout/fragment_tictactoe.xml
@@ -96,7 +96,8 @@
             android:id="@+id/resetGameButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="New Game" />
+            android:text="New Game" 
+            />
 
         
         <TextView
@@ -111,7 +112,7 @@
             android:id="@+id/nextTurnLabel"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Next Turn"
+            android:text=""
             android:textAppearance="?android:attr/textAppearanceMedium" />
         <TextView
             android:id="@+id/nextTurn"
